# RedHusky

./: CMakeLists.txt  README.md
RedHusky.vst3/Contents/Resources/: moduleinfo.json
RedHusky.vst3/Contents/x86_64-win/: RedHusky.vst3
resource/: Huskyeditor.uidesc
source/: HuskyEditor.h  HuskyIBStream.cpp  HuskyIBStream.h  HuskyLearning.cpp  HuskyLearning.h  HuskyParams.h  HuskySinging.cpp  HuskySinging.h  Huskycids.h  Huskycontroller.cpp  Huskycontroller.h  Huskyentry.cpp  Huskyprocessor.cpp  Huskyprocessor.h  version.h
